--- a/games-rus.html
+++ b/games-rus.html
@@ -24,30 +24,30 @@
                 <img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого">
               </a>
             </li>
-            <li class="main-nav__item main-nav__item--active">
-              <a href="index.html">Main</a>
+            <li class="main-nav__item">
+              <a href="index-rus.html">Главная</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--active">
+              <a href="games-rus.html">Игры</a>
             </li>
             <li class="main-nav__item">
-              <a href="games.html">Games</a>
+              <a href="soft-rus.html">Софт</a>
             </li>
             <li class="main-nav__item">
-              <a href="soft.html">Soft</a>
+              <a href="team-rus.html">Авторы</a>
             </li>
             <li class="main-nav__item">
-              <a href="team.html">Team</a>
+              <a href="contacts-rus.html">Контакты</a>
             </li>
             <li class="main-nav__item">
-              <a href="contacts.html">Contacts</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="others.html">Others</a>
+              <a href="others-rus.html">Прочее</a>
             </li>
           </ul>
         </div>
     </nav>
   <header class="page-header">
-    <a class="switch-lang eng-switch switch-activated" href="index.html"><p>Eng</p></a>
-    <a class="switch-lang rus-switch" href="index-rus.html"><p>Rus</p></a>
+    <a class="switch-lang eng-switch" href="games.html"><p>Eng</p></a>
+    <a class="switch-lang rus-switch switch-activated" href="games-rus.html"><p>Rus</p></a>
   </header>
 
   <main class="container-page">
