--- a/others.html
+++ b/others.html
@@ -24,7 +24,7 @@
                 <img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого">
               </a>
             </li>
-            <li class="main-nav__item main-nav__item--active">
+            <li class="main-nav__item">
               <a href="index.html">Main</a>
             </li>
             <li class="main-nav__item">
@@ -39,15 +39,15 @@
             <li class="main-nav__item">
               <a href="contacts.html">Contacts</a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--active">
               <a href="others.html">Others</a>
             </li>
           </ul>
         </div>
     </nav>
   <header class="page-header">
-    <a class="switch-lang eng-switch switch-activated" href="index.html"><p>Eng</p></a>
-    <a class="switch-lang rus-switch" href="index-rus.html"><p>Rus</p></a>
+    <a class="switch-lang eng-switch switch-activated" href="others.html"><p>Eng</p></a>
+    <a class="switch-lang rus-switch" href="others-rus.html"><p>Rus</p></a>
   </header>
 
   <main class="container-page">
