--- a/games.html
+++ b/games.html
@@ -24,10 +24,10 @@
                 <img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого">
               </a>
             </li>
-            <li class="main-nav__item main-nav__item--active">
+            <li class="main-nav__item">
               <a href="index.html">Main</a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--active">
               <a href="games.html">Games</a>
             </li>
             <li class="main-nav__item">
@@ -46,8 +46,8 @@
         </div>
     </nav>
   <header class="page-header">
-    <a class="switch-lang eng-switch switch-activated" href="index.html"><p>Eng</p></a>
-    <a class="switch-lang rus-switch" href="index-rus.html"><p>Rus</p></a>
+    <a class="switch-lang eng-switch switch-activated" href="games.html"><p>Eng</p></a>
+    <a class="switch-lang rus-switch" href="games-rus.html"><p>Rus</p></a>
   </header>
 
   <main class="container-page">
