--- a/index-rus.html
+++ b/index-rus.html
@@ -45,14 +45,14 @@
           </ul>
         </div>
     </nav>
-  <header class="page-header">
+  <header class="page-header page-header__index">
     <a class="switch-lang eng-switch" href="index.html"><p>Eng</p></a>
     <a class="switch-lang rus-switch switch-activated" href="index-rus.html"><p>Rus</p></a>
   </header>
 
   <main class="container-page">
     <hr class="hr-first">
-    <h2 class="mission-studio">NLB project – команда инди-разработчиков из трёх человек.</h2>
+    <h2 class="white-text-no-background">NLB project – команда инди-разработчиков из трёх человек.</h2>
 
     <p class="mission-studio__text">В один прекрасный день мы решили делать игры. В данный момент наша цель – создание необычных, увлекательных игр, способных вызывать яркие эмоции. Пока что мы работаем в жанре ВН, но планируем попробовать себя и в других жанрах.</p>
 
@@ -68,7 +68,13 @@
         <div class="sort-column-1-buttons">
 
           <a class="sort-column-1-link" href="games.html#red"><p>Подробнее об игре</p></a>
+        
           <a class="steam-btn" href="http://steamcommunity.com/sharedfiles/filedetails/?id=741019644" target="blank"><img src="img/steam.png" width="52" height="37" alt=""></a>
+
+        <div class="sort-column-1-link-flex">
+
+          
+        </div>
 
         </div>
 
