--- a/index-rus.html
+++ b/index-rus.html
@@ -51,7 +51,9 @@
   </header>
 
   <main class="container-page">
+
     <hr class="hr-first">
+
     <h2 class="white-text-no-background">NLB project – команда инди-разработчиков из трёх человек.</h2>
 
     <p class="mission-studio__text">В один прекрасный день мы решили делать игры. В данный момент наша цель – создание необычных, увлекательных игр, способных вызывать яркие эмоции. Пока что мы работаем в жанре ВН, но планируем попробовать себя и в других жанрах.</p>
@@ -68,12 +70,11 @@
         <div class="sort-column-1-buttons">
 
           <a class="sort-column-1-link" href="games.html#red"><p>Подробнее об игре</p></a>
-        
+
           <a class="steam-btn" href="http://steamcommunity.com/sharedfiles/filedetails/?id=741019644" target="blank"><img src="img/steam.png" width="52" height="37" alt=""></a>
 
         <div class="sort-column-1-link-flex">
 
-          
         </div>
 
         </div>
@@ -123,7 +124,7 @@
         <p class="near-photo-text-2 fig">Встречайте бесстрашного героя Рагнара и отправляйтесь вместе с ним на поиски приключений! Кто друг, а кто враг, кто манипулирует вами, а кому действительно нужна ваша помощь? Найдите наилучшую концовку и получите самую большую награду!
         </p>
 
-        <a class="sort-column-1-link sort-column-1-link-barbarian" href="games.html#barbarian"><p>Подробнее об игре</p></a>
+        <a class="sort-column-1-link sort-column-1-link-barbarian sort-column-1-link-barbarian-rus" href="games.html#barbarian"><p>Подробнее об игре</p></a>
 
         <a class="steam-btn steam-btn-barbarian" href = "http://store.steampowered.com/app/490690/" target="blank"><img src="img/steam.png" width="52" height="37" alt=""></a>
 
@@ -196,6 +197,93 @@
     </div>
 
     <hr class="hr-last">
+
+    <!--МОДАЛЬНЫЕ ОКНА-->
+
+    <!-- Модальное окно №1 -->
+    <a href="#x" class="overlay" id="win1"></a>
+    <div class="popup">
+      <img class="is-image" src="img/red-1.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №2 -->
+    <a href="#x" class="overlay" id="win2"></a>
+    <div class="popup">
+      <img class="is-image" src="img/red-2.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №3 -->
+    <a href="#x" class="overlay" id="win3"></a>
+    <div class="popup">
+      <img class="is-image" src="img/red-3.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №4 -->
+    <a href="#x" class="overlay" id="win4"></a>
+    <div class="popup">
+      <img class="is-image" src="img/red-4.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №5 -->
+    <a href="#x" class="overlay" id="win5"></a>
+    <div class="popup">
+      <img class="is-image" src="img/island-1.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №6 -->
+    <a href="#x" class="overlay" id="win6"></a>
+    <div class="popup">
+      <img class="is-image" src="img/island-2.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №7 -->
+    <a href="#x" class="overlay" id="win7"></a>
+    <div class="popup">
+      <img class="is-image" src="img/island-3.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №8 -->
+    <a href="#x" class="overlay" id="win8"></a>
+    <div class="popup">
+      <img class="is-image" src="img/island-4.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №9 -->
+    <a href="#x" class="overlay" id="win9"></a>
+    <div class="popup">
+      <img class="is-image" src="img/barbarian-1.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №10 -->
+    <a href="#x" class="overlay" id="win10"></a>
+    <div class="popup">
+      <img class="is-image" src="img/barbarian-2.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №11 -->
+    <a href="#x" class="overlay" id="win11"></a>
+    <div class="popup">
+      <img class="is-image" src="img/barbarian-3.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №12 -->
+    <a href="#x" class="overlay" id="win12"></a>
+    <div class="popup">
+      <img class="is-image" src="img/barbarian-4.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
   </main>
 
   <footer class="main-footer-page">
