--- a/soft-rus.html
+++ b/soft-rus.html
@@ -74,15 +74,15 @@
 
     <h2 class="white-block__h2">Ключевые особенности</h2>
 
-    <ol>
-      <li class="white-block__list-text">Редактор NLBB – визуальный, то есть вы сможете видеть граф (схему) вашей истории в удобном и наглядном виде.</li>
-      <li class="white-block__list-text">NLBB – кроссплатформенный (Windows, Mac, Linux).</li>
-      <li class="white-block__list-text">Поддерживает экспорт в несколько форматов (QSP, INSTEAD, URQ, PDF, HTML и другие).</li>
-      <li class="white-block__list-text">NLBB – бесплатный, с открытым кодом.</li>
-      <li class="white-block__list-text">Редактор поддерживает скрипты, для создания более сложных историй.</li>
-      <li class="white-block__list-text">Возможность для каждой локации установить одну картинку (или несколько, нужная будет выбираться в зависимости от указанного условия) и мелодию.</li>
-      <li class="white-block__list-text">Поддержка версионного контроля. Возможность работать над одной и той же игрой в соавторстве или просто облегчать себе работу на разных компьютерах.</li>
-      <li class="white-block__list-text">Текст в схему может быть внесён на двух языках: русском и английском (в будущем добавятся другие языки).</li>
+    <ol class="white-block__list">
+      <li>Редактор NLBB – визуальный, то есть вы сможете видеть граф (схему) вашей истории в удобном и наглядном виде.</li>
+      <li>NLBB – кроссплатформенный (Windows, Mac, Linux).</li>
+      <li>Поддерживает экспорт в несколько форматов (QSP, INSTEAD, URQ, PDF, HTML и другие).</li>
+      <li>NLBB – бесплатный, с открытым кодом.</li>
+      <li>Редактор поддерживает скрипты, для создания более сложных историй.</li>
+      <li>Возможность для каждой локации установить одну картинку (или несколько, нужная будет выбираться в зависимости от указанного условия) и мелодию.</li>
+      <li>Поддержка версионного контроля. Возможность работать над одной и той же игрой в соавторстве или просто облегчать себе работу на разных компьютерах.</li>
+      <li>Текст в схему может быть внесён на двух языках: русском и английском (в будущем добавятся другие языки).</li>
     </ol>
 
     <h2 class="white-block__h2">Еще немного о NLBB</h2>
@@ -96,7 +96,7 @@
     <p class="white-block__text">
     C помощью NLBB  можно за день создать короткую, но полноценную игру с несложной механикой. Но не скрою, что для создания грандиозных проектов со сложной механикой без знаний по программированию всё же не обойтись. Теперь хотелось бы привести пару примеров сложных функций реализованных в NLBB:
     <p>
-    <ol>
+    <ol class="white-block__list">
       <li>Возможность в одной и той же локации разместить несколько разных кусочков текста. Например: у вас имеется ключевая локация в которой сходятся несколько веток. Попадая в ключевую локацию с разных веток, ГГ может обладать различными знаниями, опытом, навыками и так далее, ведь на каждой ветке с ним происходили разные события. Таким образом, в ключевой локации будет подставляться необходимый кусочек текста, в зависимости от того, с какой ветки прибыл ГГ. Это поможет сделать сюжет более сложным и интересным, а текст в игре более разнообразным, при этом схема не будет перегружена.</li>
       <li>Также, существует возможность к одной и той же локации установить несколько разных картинок, которые будут показываться в зависимости от выполнившихся на данный момент условий.</li>
       <li>Возможность создания скриптов, которые могут запускаться при посещении локации или при переходе по ссылкам.</li>
@@ -156,6 +156,29 @@
     </div>
 
     <hr class="hr-last">
+
+    <!--МОДАЛЬНЫЕ ОКНА-->
+
+    <!-- Модальное окно №1 -->
+    <a href="#x" class="overlay" id="win1"></a>
+    <div class="popup">
+      <img class="is-image" src="img/nlbb-1.png" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №2 -->
+    <a href="#x" class="overlay" id="win2"></a>
+    <div class="popup">
+      <img class="is-image" src="img/nlbb-2.png" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №3 -->
+    <a href="#x" class="overlay" id="win3"></a>
+    <div class="popup">
+      <img class="is-image" src="img/nlbb-3.png" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
 
   </main>
 
