--- a/others.html
+++ b/others.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
     </nav>
-  <header class="page-header">
+  <header class="page-header page-header__others">
     <a class="switch-lang eng-switch switch-activated" href="others.html"><p>Eng</p></a>
     <a class="switch-lang rus-switch" href="others-rus.html"><p>Rus</p></a>
   </header>
