--- a/contacts-rus.html
+++ b/contacts-rus.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
     </nav>
-  <header class="page-header">
+  <header class="page-header page-header__contacts">
     <a class="switch-lang eng-switch" href="contacts.html"><p>Eng</p></a>
     <a class="switch-lang rus-switch switch-activated" href="contacts-rus.html"><p>Rus</p></a>
   </header>
