--- a/games.html
+++ b/games.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
     </nav>
-  <header class="page-header">
+  <header class="page-header page-header__games">
     <a class="switch-lang eng-switch switch-activated" href="games.html"><p>Eng</p></a>
     <a class="switch-lang rus-switch" href="games-rus.html"><p>Rus</p></a>
   </header>
