--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
     </nav>
-  <header class="page-header">
+  <header class="page-header page-header__team">
     <a class="switch-lang eng-switch switch-activated" href="team.html"><p>Eng</p></a>
     <a class="switch-lang rus-switch" href="team-rus.html"><p>Rus</p></a>
   </header>
