--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         function VK_Widget_Init(){
           document.getElementById('vk_groups').innerHTML = "";
           var vk_width = document.getElementById('vk_widget').clientWidth;
-          VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, width: "auto", height: "500px", color3: '0F25AE'}, 85687194);
+          VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, width: "100%", height: "500px", color3: '0F25AE'}, 85687194);
         };
         window.addEventListener('load', VK_Widget_Init, false);
         window.addEventListener('resize', VK_Widget_Init, false);
