--- a/soft-rus.html
+++ b/soft-rus.html
@@ -61,8 +61,8 @@
 
     <div class="photo-three-line">
 
-      <a href="#win1"><img class="soft-image-1" src="img/nlbb-1.png" width="234" height="140" alt=""></a> 
-      <a href="#win2"><img class="soft-image-2" src="img/nlbb-2.png" width="234" height="140" alt=""></a>   
+      <a href="#win1"><img class="soft-image-1" src="img/nlbb-1.png" width="234" height="140" alt=""></a>
+      <a href="#win2"><img class="soft-image-2" src="img/nlbb-2.png" width="234" height="140" alt=""></a>
       <a href="#win3"><img class="soft-image-3" src="img/nlbb-3.png" width="234" height="140" alt=""></a>
 
     </div>
@@ -279,7 +279,7 @@
 
   </div>
   <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script async src="js/script.js"></script>
+  <script async src="js/script.min.js"></script>
   <script async src="js/svg4everybody.min.js"></script>
   <script async>svg4everybody();</script>
   <script async src="js/picturefill.min.js"></script>
