--- a/team-rus.html
+++ b/team-rus.html
@@ -95,7 +95,7 @@
 
       <div class="block-2 clearfix">
 
-        <a href="#win3"><img class="white-block__photo" src="img/author-third.jpg" width="150" height="200" alt=""></a> 
+        <a href="#win3"><img class="white-block__photo" src="img/author-third.jpg" width="150" height="200" alt=""></a>
 
         <h2 class="white-block__h2 white-block__h2--right">Сергей Севостьянов.<br> Переводчик, композитор, 3D-дизайнер.</h2>
 
@@ -274,7 +274,7 @@
 
   </div>
   <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script async src="js/script.js"></script>
+  <script async src="js/script.min.js"></script>
   <script async src="js/svg4everybody.min.js"></script>
   <script async>svg4everybody();</script>
   <script async src="js/picturefill.min.js"></script>
