--- a/team.html
+++ b/team.html
@@ -63,7 +63,7 @@
 
       <div class="block-2 clearfix">
 
-        <a href="#win1"><img class="white-block__photo" src="img/author-first.jpg" width="150" height="200" alt=""></a> 
+        <a href="#win1"><img class="white-block__photo" src="img/author-first.jpg" width="150" height="200" alt=""></a>
 
         <h2 class="white-block__h2 white-block__h2--right">Anton Kolosov.<br>Programmer, senior public relations manager.</h2>
 
@@ -230,7 +230,7 @@
 
   </div>
   <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script async src="js/script.js"></script>
+  <script async src="js/script.min.js"></script>
   <script async src="js/svg4everybody.min.js"></script>
   <script async>svg4everybody();</script>
   <script async src="js/picturefill.min.js"></script>
