--- a/soft.html
+++ b/soft.html
@@ -62,13 +62,13 @@
     <div class="photo-three-line">
 
       <a href="#win1">
-        <img class="soft-image-2" src="img/nlbb-1.png" width="234" height="140" alt="">
+        <img class="soft-image-2" src="img/nlbb-1.jpg" width="234" height="140" alt="">
       </a>
       <a href="#win2">
-        <img class="soft-image-2" src="img/nlbb-2.png" width="234" height="140" alt="">
+        <img class="soft-image-2" src="img/nlbb-2.jpg" width="234" height="140" alt="">
       </a>
       <a href="#win3">
-        <img class="soft-image-3" src="img/nlbb-3.png" width="234" height="140" alt="">
+        <img class="soft-image-3" src="img/nlbb-3.jpg" width="234" height="140" alt="">
       </a>
 
     </div>
@@ -194,21 +194,21 @@
     <!-- Модальное окно №1 -->
     <a href="#x" class="overlay" id="win1"></a>
     <div class="popup">
-      <img class="is-image" src="img/nlbb-1.png" alt=""/>
+      <img class="is-image" src="img/nlbb-1.jpg" alt=""/>
       <a class="close" title="Закрыть" href="#close"></a>
     </div>
 
     <!-- Модальное окно №2 -->
     <a href="#x" class="overlay" id="win2"></a>
     <div class="popup">
-      <img class="is-image" src="img/nlbb-2.png" alt=""/>
+      <img class="is-image" src="img/nlbb-2.jpg" alt=""/>
       <a class="close" title="Закрыть" href="#close"></a>
     </div>
 
     <!-- Модальное окно №3 -->
     <a href="#x" class="overlay" id="win3"></a>
     <div class="popup">
-      <img class="is-image" src="img/nlbb-3.png" alt=""/>
+      <img class="is-image" src="img/nlbb-3.jpg" alt=""/>
       <a class="close" title="Закрыть" href="#close"></a>
     </div>
 
