--- a/index-rus.html
+++ b/index-rus.html
@@ -75,6 +75,12 @@
 
     </div>
 
+    <div class="text-about-new-red-hat">
+
+      <p class="white-text-with-background white-text-with-background--short-twit white-text-with-background--new-red-hat"><a class="link-new-red-hat" href="https://docs.google.com/forms/d/e/1FAIpQLSfWfxSRnptXTe0XpUisiaZfruzMxk4ufGsTut0Q0NtxwaeJag/viewform" target="_blank">Следуя принципу "Vox Populi, Vox Dei" ("Глас народа - глас Бога") мы подготовили для вас анкету-опросник по нашим играм! Информация из нее позволит нам учесть пожелания аудитории при создании нашей следующей игры.</a></p>
+
+    </div>
+
     <hr>
 
     <div class="game-preview__main-block">
