--- a/index-rus.html
+++ b/index-rus.html
@@ -71,7 +71,7 @@
 
     <div class="text-about-new-red-hat">
 
-      <p class="white-text-with-background white-text-with-background--short-twit white-text-with-background--new-red-hat"><a class="link-new-red-hat" href="https://store.steampowered.com/app/594320/Return_of_Red_Riding_Hood_Enhanced_Edition/" target="blank">Мы рады сообщить, что 20 января новая версия "Красной Шапочки" - "Return of Red Riding Hood Enhanced Edition" - вышла в Стиме!</a></p>
+      <p class="white-text-with-background white-text-with-background--short-twit white-text-with-background--new-red-hat"><a class="link-new-red-hat" href="http://store.steampowered.com/app/815070/The_Adventurous_Four/" target="blank">Мы рады сообщить, что 23 марта наша новая игра "Неукротимая четверка" выйдет в Стиме!</a></p>
 
     </div>
 
@@ -85,7 +85,39 @@
 
     <div class="game-preview__main-block">
 
-    <section class="game-preview">
+    <article class="game-preview">
+
+      <div class="game-preview__block">
+
+        <a class="game-preview__title-link" href="games-rus.html#adventurous"><h2 class="game-preview__title">"Неукротимая четвёрка"</h2></a>
+        <p class="game-preview__text">"Неукротимая четвёрка" является достойным продолжением визуальной новеллы "Дикий остров", которая вышла в свет несколько лет назад. В данной книге-игре вам предстоит отправиться в полное опасностей и приключений путешествие, главные герои которого связаны крепкой дружбой.</p>
+
+        <div class="game-preview__buttons-block">
+
+          <a class="game-preview__button-details" href="games-rus.html#adventurous"><p>об игре</p></a>
+
+          <a class="game-preview__button-steam" href="http://store.steampowered.com/app/815070/The_Adventurous_Four/" target="blank"><img src="img/steam.png" width="52" height="37" alt=""></a>
+
+        </div>
+
+      </div>
+
+      <div class="game-preview__photo-block">
+
+        <a href="#win19"><img class="game-preview__photo" src="img/adventurous-1-rus.jpg" width="234" height="140" alt=""></a>
+        <a href="#win20"><img class="game-preview__photo" src="img/adventurous-2-rus.jpg" width="234" height="140" alt=""></a>
+        <a href="#win21"><img class="game-preview__photo" src="img/adventurous-3-rus.jpg" width="234" height="140" alt=""></a>
+        <a href="#win22"><img class="game-preview__photo" src="img/adventurous-4-rus.jpg" width="234" height="140" alt=""></a>
+        <a href="#win23"><img class="game-preview__photo" src="img/adventurous-5-rus.jpg" width="234" height="140" alt=""></a>
+        <a href="#win24"><img class="game-preview__photo" src="img/adventurous-6-rus.jpg" width="234" height="140" alt=""></a>
+
+      </div>
+
+    </article>
+
+    <hr>
+
+    <article class="game-preview">
 
       <div class="game-preview__block">
 
@@ -113,43 +145,11 @@
 
       </div>
 
-    </section>
+    </article>
 
     <hr>
 
-    <section class="game-preview">
-
-      <div class="game-preview__block">
-
-        <a class="game-preview__title-link" href="games.html#island"><h2 class="game-preview__title">"Дикий остров"</h2></a>
-        <p class="game-preview__text">Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров.  Вы можете отправиться на Дикий Остров с главными героями, чтобы вместе пережить полное опасностей приключение. Возьмите с собой одного или нескольких друзей и расскройте тайну Дикого Острова!</p>
-
-        <div class="game-preview__buttons-block">
-
-          <a class="game-preview__button-details" href="games-rus.html#island"><p>об игре</p></a>
-
-          <a class="game-preview__button-steam" href = "http://store.steampowered.com/app/392820" target="blank"><img src="img/steam.png" width="52" height="37" alt=""></a>
-
-        </div>
-
-      </div>
-
-      <div class="game-preview__photo-block">
-
-        <a href="#win7"><img class="game-preview__photo" src="img/island-1-prw.jpg" width="234" height="140" alt=""></a>
-        <a href="#win8"><img class="game-preview__photo" src="img/island-2-prw.jpg" width="234" height="140" alt=""></a>
-        <a href="#win9"><img class="game-preview__photo" src="img/island-3-prw.jpg" width="234" height="140" alt=""></a>
-        <a href="#win10"><img class="game-preview__photo" src="img/island-4-prw.jpg" width="234" height="140" alt=""></a>
-        <a href="#win11"><img class="game-preview__photo" src="img/island-5-prw.jpg" width="234" height="140" alt=""></a>
-        <a href="#win12"><img class="game-preview__photo" src="img/island-6-prw.jpg" width="234" height="140" alt=""></a>
-
-      </div>
-
-    </section>
-
-    <hr>
-
-        <section class="game-preview">
+    <article class="game-preview">
 
       <div class="game-preview__block">
 
@@ -180,7 +180,39 @@
 
       </div>
 
-    </section>
+    </article>
+
+    <hr>
+
+    <article class="game-preview">
+
+      <div class="game-preview__block">
+
+        <a class="game-preview__title-link" href="games.html#island"><h2 class="game-preview__title">"Дикий остров"</h2></a>
+        <p class="game-preview__text">Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров.  Вы можете отправиться на Дикий Остров с главными героями, чтобы вместе пережить полное опасностей приключение. Возьмите с собой одного или нескольких друзей и расскройте тайну Дикого Острова!</p>
+
+        <div class="game-preview__buttons-block">
+
+          <a class="game-preview__button-details" href="games-rus.html#island"><p>об игре</p></a>
+
+          <a class="game-preview__button-steam" href = "http://store.steampowered.com/app/392820" target="blank"><img src="img/steam.png" width="52" height="37" alt=""></a>
+
+        </div>
+
+      </div>
+
+      <div class="game-preview__photo-block">
+
+        <a href="#win7"><img class="game-preview__photo" src="img/island-1-prw.jpg" width="234" height="140" alt=""></a>
+        <a href="#win8"><img class="game-preview__photo" src="img/island-2-prw.jpg" width="234" height="140" alt=""></a>
+        <a href="#win9"><img class="game-preview__photo" src="img/island-3-prw.jpg" width="234" height="140" alt=""></a>
+        <a href="#win10"><img class="game-preview__photo" src="img/island-4-prw.jpg" width="234" height="140" alt=""></a>
+        <a href="#win11"><img class="game-preview__photo" src="img/island-5-prw.jpg" width="234" height="140" alt=""></a>
+        <a href="#win12"><img class="game-preview__photo" src="img/island-6-prw.jpg" width="234" height="140" alt=""></a>
+
+      </div>
+
+    </article>
 
     </div>
 
@@ -347,6 +379,48 @@
     <a href="#x" class="overlay" id="win18"></a>
     <div class="popup">
       <img class="is-image" src="img/barbarian-6.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №19 -->
+    <a href="#x" class="overlay" id="win19"></a>
+    <div class="popup">
+      <img class="is-image" src="img/adventurous-1-rus.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №20 -->
+    <a href="#x" class="overlay" id="win20"></a>
+    <div class="popup">
+      <img class="is-image" src="img/adventurous-2-rus.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №21 -->
+    <a href="#x" class="overlay" id="win21"></a>
+    <div class="popup">
+      <img class="is-image" src="img/adventurous-3-rus.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №22 -->
+    <a href="#x" class="overlay" id="win22"></a>
+    <div class="popup">
+      <img class="is-image" src="img/adventurous-4-rus.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №23 -->
+    <a href="#x" class="overlay" id="win23"></a>
+    <div class="popup">
+      <img class="is-image" src="img/adventurous-5-rus.jpg" alt=""/>
+      <a class="close" title="Закрыть" href="#close"></a>
+    </div>
+
+    <!-- Модальное окно №24 -->
+    <a href="#x" class="overlay" id="win24"></a>
+    <div class="popup">
+      <img class="is-image" src="img/adventurous-6-rus.jpg" alt=""/>
       <a class="close" title="Закрыть" href="#close"></a>
     </div>
 
